tests/ensure_parsed_priority_no_saved_state/ensure_parsed_priority_no_saved_state.exp
==== No errors at start====
No errors!

The Flow server is currently in lazy mode and is only checking 0/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes


==== Still don't notice the error ====
No errors!

The Flow server is currently in lazy mode and is only checking 3/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes


==== Now we see the parse error ====
Error --------------------------------------------------------------------------------------------------------- B.js:4:1

Unexpected end of input, expected the token `(`

   4|
      



Found 1 error

The Flow server is currently in lazy mode and is only checking 2/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes


==== We don't see the unknown module exception yet ====
No errors!

The Flow server is currently in lazy mode and is only checking 3/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes


==== Now we see the unknown module error ====
Error -------------------------------------------------------------------------------------------------------- C.js:2:19

Cannot resolve module `./D.js`. [cannot-resolve-module]

   2| import {bar} from './D.js';
                        ^^^^^^^^



Found 1 error

The Flow server is currently in lazy mode and is only checking 3/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
